Shifted the year 2006 into the table at http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -71,13 +71,18 @@
     <h2>Posters</h2>
 
   <div class="main_h3">
-    <h3>2006</h3>
 
-    <table cellpadding="5">
+    <table>
       <tbody>
+        <!-- The year -->
+        <tr>
+          <td colspan="5"><font size="+1"><strong>2006</strong></font></td>
+        </tr>
+
+        <!-- ICMRBS -->
         <tr>
           <td><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
-          <td colspan="3">XXII<sup>nd</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS), Goettingen, Germany.</td>
+          <td colspan="4">XXII<sup>nd</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS), Goettingen, Germany.</td>
         </tr>
         <tr>
           <td></td>
