Shifted the 2009 ENC into the table at http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -90,17 +90,27 @@
           <td><a href="http://nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></td>
           <td><a href="http://nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></td>
         </tr>
+
+        <!-- The year -->
+        <tr>
+          <td colspan="5"><font size="+1"><strong>2009</strong></font></td>
+        </tr>
+
+        <!-- ENC -->
+        <tr>
+          <td><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
+          <td colspan="4">50<sup>th</sup> Experimental Nuclear Magnetic Resonance Conference (ENC), Asilomar, CA, USA.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><strong>Author:</strong> Edward d'Auvergne</td>
+          <td><a href="http://nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract</a></td>
+          <td><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster</a></td>
+          <td><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures and more)</a></td>
+        </tr>
       </tbody>
     </table>
 
-
-    <h3>2009 - 50th Experimental Nuclear Magnetic Resonance Conference (Asilomar, CA, USA)</h3>
-
-    <ul>
-      <li><a href="http://nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract</a></li>
-      <li><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster</a></li>
-      <li><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures and more)</a></li>
-    </ul>
 
     <h3>2009 - 22nd MOOT (Ottawa, ON, Canada)</h3>
 
