Changed 'Author' to 'Presenter' at http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -87,7 +87,7 @@
         </tr>
         <tr>
           <td></td>
-          <td><strong>Author:</strong> Edward d'Auvergne</td>
+          <td><strong>Presenter:</strong> Edward d'Auvergne</td>
           <td><a href="http://nmr-relax.com/conferences/edward_abstract_ICMRBS_2006_Goettingen_Germany.txt">Abstract</a></td>
           <td><a href="http://nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></td>
         </tr>
@@ -107,7 +107,7 @@
         </tr>
         <tr>
           <td></td>
-          <td><strong>Author:</strong> Edward d'Auvergne</td>
+          <td><strong>Presenter:</strong> Edward d'Auvergne</td>
           <td><a href="http://nmr-relax.com/conferences/edward_enc2009_abstract.pdf">Abstract</a></td>
           <td><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster</a></td>
           <td><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures and more)</a></td>
