--- a/events.html
+++ b/events.html
@@ -102,7 +102,7 @@
 
         <!-- ENC -->
         <tr>
-          <td><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
+          <td><a href="http://www.enc-conference.org/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
           <td colspan="4">50<sup>th</sup> Experimental Nuclear Magnetic Resonance Conference (ENC), Asilomar, CA, USA.</td>
         </tr>
         <tr>
