Shifted Seb's MOOT poster into the table at http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -112,15 +112,21 @@
           <td><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA.pdf">Poster</a></td>
           <td><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures and more)</a></td>
         </tr>
+
+        <!-- MOOT -->
+        <tr></tr>
+        <tr>
+          <td><a href="http://www.mootnmr.org/"><img src="images/MOOT_logo_mini.png" alt="22nd MOOT" class="image"/></a></td>
+          <td colspan="4">22<sup>nd</sup> MOOT, Ottawa, ON, Canada.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><strong>Presenter:</strong> S&eacute;bastien Morin</td>
+          <td><a href="http://nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster</a></td>
+        </tr>
       </tbody>
     </table>
 
-
-    <h3>2009 - 22nd MOOT (Ottawa, ON, Canada)</h3>
-
-    <ul>
-      <li><a href="http://nmr-relax.com/conferences/poster__MOOT_2009_Ottawa_Canada.pdf">Poster</a></li>
-    </ul>
 
     <div class="main_h2">
     <h2>Disclaimer</h2>
