Div box fixes for http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -70,8 +70,6 @@
   <div class="main_h2">
     <h2>Posters</h2>
 
-  <div class="main_h3">
-
     <table>
       <tbody>
         <!-- The year -->
@@ -126,6 +124,7 @@
         </tr>
       </tbody>
     </table>
+    </div>
 
 
     <div class="main_h2">
