Reintroduced cellpadding into the table at http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -70,7 +70,7 @@
   <div class="main_h2">
     <h2>Posters</h2>
 
-    <table>
+    <table cellpadding="10">
       <tbody>
         <!-- The year -->
         <tr>
