Converted the year sections of the table to the conference year and name.
This is to make it look like there is equal emphasis on all events.  See
http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -72,13 +72,9 @@
 
     <table cellpadding="10">
       <tbody>
-        <!-- The year -->
         <tr>
-          <td colspan="5"><font size="+2"><strong>2006</strong></font></td>
+          <td colspan="5"><font size="+1"><strong>2006 ENC</strong></font></td>
         </tr>
-        <tr></tr>
-
-        <!-- ICMRBS -->
         <tr>
           <td><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
           <td colspan="4">XXII<sup>nd</sup> International Conference on Magnetic Resonance in Biological Systems (ICMRBS), Goettingen, Germany.</td>
@@ -90,15 +86,9 @@
           <td><a href="http://nmr-relax.com/conferences/edward_poster_ICMRBS_2006_Goettingen_Germany.pdf">Poster</a></td>
         </tr>
 
-        <!-- The year -->
-        <tr></tr>
-        <tr></tr>
         <tr>
-          <td colspan="5"><font size="+2"><strong>2009</strong></font></td>
+          <td colspan="5"><font size="+1"><strong>2009 ICMRBS</strong></font></td>
         </tr>
-        <tr></tr>
-
-        <!-- ENC -->
         <tr>
           <td><a href="http://www.enc-conference.org/"><img src="images/50thENC.jpg" alt="ENC 2009" class="image"/></a></td>
           <td colspan="4">50<sup>th</sup> Experimental Nuclear Magnetic Resonance Conference (ENC), Asilomar, CA, USA.</td>
@@ -111,8 +101,9 @@
           <td><a href="http://nmr-relax.com/conferences/poster__ENC_2009_Asilomar_USA_files.tar.bz2">Poster files (figures and more)</a></td>
         </tr>
 
-        <!-- MOOT -->
-        <tr></tr>
+        <tr>
+          <td colspan="5"><font size="+1"><strong>2009 MOOT</strong></font></td>
+        </tr>
         <tr>
           <td><a href="http://www.mootnmr.org/"><img src="images/MOOT_logo_mini.png" alt="22nd MOOT" class="image"/></a></td>
           <td colspan="4">22<sup>nd</sup> MOOT, Ottawa, ON, Canada.</td>
