Added the ANZMAG 2004 conference to http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -73,6 +73,20 @@
     <table cellpadding="10">
       <tbody>
         <tr>
+          <td colspan="5"><font size="+1"><strong>2004 ANZMAG</strong></font></td>
+        </tr>
+        <tr>
+          <td><a href="http://www.anzmag.com.au/conferences.php"><img src="images/anzmag_2004/barossa_mini.png" alt="ANZMAG 2004" class="image"/></a></td>
+          <td colspan="4">The Australia and New Zealand society for Magnetic Resonance (ANZMAG) Conference, Barossa Valley, Australia.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><strong>Presenter:</strong> Edward d'Auvergne</td>
+          <td><a href="http://nmr-relax.com/conferences/edward_abstract_ANZMAG_2004.txt">Abstract</a></td>
+          <td><a href="http://nmr-relax.com/conferences/edward_poster_ANZMAG_2004.pdf">Poster</a></td>
+        </tr>
+
+        <tr>
           <td colspan="5"><font size="+1"><strong>2006 ICMRBS</strong></font></td>
         </tr>
         <tr>
