--- a/download.html
+++ b/download.html
@@ -90,6 +90,10 @@
 
       <p>Numerical integration is required for the frame order theory.  This is currently not implemented within relax so the QUADPACK numerical integration provided by <a href="http://www.scipy.org/">SciPy</a> is used.  Without this package being installed, the frame order analysis will not be accessible.</p>
 
+      <h4>wxPython</h4>
+
+      <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.</p>
+
     </div>
 
 
@@ -131,6 +135,7 @@
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
+            <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
           </ul>
 
     </div>
@@ -166,6 +171,7 @@
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
             <li><a href="http://ipython.scipy.org/moin/PyReadline/Intro">pyreadline</a> &gt;= 1.3: <a href="http://launchpad.net/pyreadline/1.5/1.5/+download/pyreadline-1.5-win32-setup.exe">pyreadline-1.5-win32-setup.exe</a></li>
+            <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
           </ul>
 
 
@@ -194,6 +200,7 @@
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
+            <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
           </ul>
 
     </div>
@@ -236,6 +243,7 @@
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
+            <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
           </ul>
 
          <h3 id="compilation">Compilation</h3>
