Updated the relax requirement to Python 2.5 at http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -74,7 +74,7 @@
 
       <p>The current stable release is relax version 1.3.8.</p>
 
-      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with Python 2.4 on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
+      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 or 2.6 but can work with other Python versions on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
       <p>For details about the relax GPG signatures and their usage, see the Security section at the end of this page.</p>
 
@@ -131,7 +131,7 @@
         <h3>Dependencies</h3>
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a  href="http://www.python.org/ftp/python/2.6.6/Python-2.6.6.tar.bz2">Python-2.6.6.tar.bz2</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a  href="http://www.python.org/ftp/python/2.6.6/Python-2.6.6.tar.bz2">Python-2.6.6.tar.bz2</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
@@ -184,11 +184,7 @@
 <!-- Mac OS X -->
     <div class="main_h2">
       <h2>Mac OS X</h2>
-        <p>Pre-compiled binary releases of certain relax versions are available for Mac OS X within the <a href="http://www.finkproject.org/">Fink project</a>.  These can be installed for Python 2.4 with the command:</p>
-
-        <p><em>> fink install relax-py24</em></p>
-
-        <p>or for Python 2.5 with:</p>
+        <p>Pre-compiled binary releases of certain relax versions are available for Mac OS X within the <a href="http://www.finkproject.org/">Fink project</a>.  These can be installed for Python 2.5 with the command:</p>
 
         <p><em>> fink install relax-py25</em></p>
 
@@ -196,7 +192,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.6/python-2.6.6-macosx10.3.dmg">python-2.6.6-macosx10.3.dmg</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/ftp/python/2.6.6/python-2.6.6-macosx10.3.dmg">python-2.6.6-macosx10.3.dmg</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
@@ -239,7 +235,7 @@
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
-            <li><a href="http://python.org">Python</a> &gt;= 2.4 (excluding &gt;= 3.0): <a href="http://www.python.org/download/releases/2.6.6/">Python 2.6.6 release page</a></li>
+            <li><a href="http://python.org">Python</a> &gt;= 2.5 (excluding &gt;= 3.0): <a href="http://www.python.org/download/releases/2.6.6/">Python 2.6.6 release page</a></li>
             <li><a href="http://numpy.scipy.org/">NumPy</a> &gt;= 1.0.4: <a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></li>
             <li><a href="http://www.scipy.org/">SciPy</a> (optional) &gt;= 0.7.1: <a  href="http://sourceforge.net/projects/scipy/files/scipy/">SciPy downloads</a></li>
             <li><a href="http://sourcesup.cru.fr/projects/scientific-py/">Scientific Python</a> (optional) &gt;= 2.8: <a href="http://sourcesup.cru.fr/frs/download.php/2309/ScientificPython-2.8.tar.gz">ScientificPython-2.8.tar.gz</a></li>
