--- a/features.html
+++ b/features.html
@@ -16,6 +16,7 @@
   <title>Program features</title>
   <meta name="AUTHOR" content="Edward d'Auvergne"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta name="Description" content="Software for dynamics analysis, model-free analysi, modelfree analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." />
   <link rel="stylesheet" type="text/css" href="relax.css"/>
 </head>
 
