Listed the GUI to the user interface list in the feature section.

--- a/features.html
+++ b/features.html
@@ -147,6 +147,13 @@ used as optimisation engines replacing the minimisation algorithms built into re
     <ul>
      <li>The prompt - this is the primary interface of relax.  Rather than reinventing a new command language, relax's interface is the powerful Python prompt.  This gives the power user full access to a proven programming language.</li>
      <li>Scripting - this provides a more powerful and flexible framework for controlling the program.  The script will be executed as Python code enabling advanced programming for automating data analysis.  All the features available within the prompt environment are accessible to the script.</li>
+     <li>Graphical User Interface (GUI) - this offers a simple and easy way of performing data analysis. Calculation of steady-state NOE, curve fitting of R<sub>1</sub> and R<sub>2</sub> relaxation rates as well as model-free analysis are supported. Most parameters used for analysis can be set manually, but system standards are set accoring to d'Auvergne and Gooley, 2008b. In addition, the graphical user interface has a fully automated model-free analysis feature that performs analysis without any user intervention after loading NOE, R<sub>1</sub> and R<sub>2</sub> data.</li>
+     <p>To start relax with the graphical interface, start relax using: $ relax -g</p>
+     <p>relaxGUI: a new software for fast and simple NMR relaxation data analysis and calculation of ps-ns and μs motion of proteins., Bieri M, d'Auvergne EJ, Gooley PR., J Biomol NMR, 2011</p>
+     <p>Screenshots running on Ubuntu 11.04:</p>
+     <img src="images/gui/gui_modelfree.png" /> Model-free analysis interface
+     <img src="images/gui/gui_Rx.png" /> Relaxation-rate curve fitting interface
+     <img src="images/gui/gui_NOE.png" /> Steady-state NOE calculation interface
     </ul>
   </div>
 
