On the download page, added some instructions for the installation of wxPython under Mac OSX.

--- a/download.html
+++ b/download.html
@@ -193,6 +193,8 @@
             <li><a href="http://www.wxpython.org/">wxPython</a> (optional) &gt;= 2.8: <a href="http://www.wxpython.org/download.php#stable">wxPython stable downloads</a></li>
           </ul>
 
+        <p>When using a 64-bit system, 64-bit compatible wxPython must be used, i.e. a version using the Cocoa API for implementing the GUI. Currently, this is only available for Python 2.7. One version can be downloaded <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-osx-2.9.1.1-cocoa-py2.7.dmg">here</a>.</p>
+
     </div>
 
 
