Added a section for the source code repository in the download page.
This follows a message by Edward at:
https://mail.gna.org/public/relax-devel/2011-06/msg00078.html
Message-id: <BANLkTimq=4vfngu+u2WBAuTTsS0nMW+B4A@mail.gmail.com>

--- a/download.html
+++ b/download.html
@@ -248,6 +248,28 @@
           <p>The <a href="devel_platform.html">development platform</a> is required for compiling the C modules through <a href="http://www.scons.org/">SCons</a>, for compiling the LaTeX manual, and generating relax distribution packages.</p>
 
    </div>
+
+
+
+<!-- Source code repository -->
+<div class="main_h2">
+    <h2>Source code repository</h2>
+
+    <p>The most up-to-date code can be obtained from <a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a> using one of the following commands (which involve the program <a href="http://subversion.tigris.org/">Subversion</a>):</p>
+
+    <p><em>> svn co svn://svn.gna.org/svn/relax/1.2 ./relax-1.2</em></p>
+
+    <p><em>> svn co svn://svn.gna.org/svn/relax/1.3 ./relax-1.3</em></p>
+
+    <p>or:</p>
+
+    <p><em>> svn co http://svn.gna.org/svn/relax/1.2 ./relax-1.2</em></p>
+
+    <p><em>> svn co http://svn.gna.org/svn/relax/1.3 ./relax-1.3</em></p>
+
+    <p>The code obtained from the repository is the most up-to-date. However, at some points, this code could be unstable and non functionnal.</p>
+
+   </div>
   </div>
 
 
