Added a reference to the update of the repository code using 'svn up'.

--- a/download.html
+++ b/download.html
@@ -266,7 +266,11 @@
 
     <p><em>> svn co http://svn.gna.org/svn/relax/1.3 ./relax-1.3</em></p>
 
-    <p>The code obtained from the repository is the most up-to-date. However, at some points, this code could be unstable and non functionnal.</p>
+    <p>The code obtained from the repository is the most up-to-date (and sometimes evolves quite rapidly). To keep up with changes, the <a href="http://subversion.tigris.org/">Subversion</a> update command must be used:</p>
+
+    <p><em>> svn up</em></p>
+
+    <p>Keep in mind: since this code changes often, at some points, it could be unstable and non functionnal.</p>
 
    </div>
   </div>
