Corrected a French/English typo on the download page (http://www.nmr-relax.com/download.html).
This follows a message by Edward at:
https://mail.gna.org/public/relax-devel/2011-06/msg00123.html
Message-id: <BANLkTim7CVE2jepQLM+RRguHrmPB726uFQ@mail.gmail.com>

--- a/download.html
+++ b/download.html
@@ -266,7 +266,7 @@
 
     <p><em>> svn up</em></p>
 
-    <p>Keep in mind: since this code changes often, at some points, it could be unstable and non functionnal.</p>
+    <p>Keep in mind: since this code changes often, at some points, it could be unstable and non functional.</p>
 
    </div>
   </div>
