--- a/download.html
+++ b/download.html
@@ -4,6 +4,7 @@
 
 <!--
   Copyright (c) 2006 Edward d'Auvergne.
+  Copyright (c) 2011 Sebastien Morin.
   Permission is granted to copy, distribute and/or modify this document
   under the terms of the GNU Free Documentation License, Version 1.2
   or any later version published by the Free Software Foundation;
@@ -14,7 +15,7 @@
 
 <head>
   <title>Downloads</title>
-  <meta name="AUTHOR" content="Edward d'Auvergne"/>
+  <meta name="AUTHOR" content="Edward d'Auvergne and S&eacute;bastien Morin"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="Description" content="Software for dynamics analysis, model-free analysi, modelfree analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." />
   <link rel="stylesheet" type="text/css" href="relax.css"/>
