--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
 
 <!--
   Copyright (c) 2005-2006 Edward d'Auvergne.
+  Copyright (c) 2011 Sebastien Morin.
   Permission is granted to copy, distribute and/or modify this document
   under the terms of the GNU Free Documentation License, Version 1.2
   or any later version published by the Free Software Foundation;
