Created a menu on top of the download page to point towards the different platforms supported.
http://www.nmr-relax.com/download.html

This follows a post by Edward at:
https://mail.gna.org/public/relax-devel/2011-06/msg00078.html
Message-id: <BANLkTimq=4vfngu+u2WBAuTTsS0nMW+B4A@mail.gmail.com>

--- a/download.html
+++ b/download.html
@@ -69,10 +69,24 @@
     <h1>Current releases</h1>
 
 
+<ul>
+<li><a href="download.html#General_info">General information</a></li>
+
+<li><a href="download.html#GNU_Linux">GNU/Linux</a></li>
+
+<li><a href="download.html#MS_Windows">MS Windows</a></li>
+
+<li><a href="download.html#Mac_OS_X">Mac OS X</a></li>
+
+<li><a href="download.html#Source_code_release">Source code release</a></li>
+
+<li><a href="download.html#Source_code_repository">Source code repository</a></li>
+</ul>
+
 
 <!-- General info -->
-    <div class="main_h2">
-      <h2>General information</h2>
+    <div id="General_info" class="main_h2">
+      <h2> General information</h2>
 
       <p>The current stable release is relax version 1.3.10.</p>
 
@@ -97,7 +111,7 @@
 
 
 <!-- GNU Linux -->
-    <div class="main_h2">
+    <div id="GNU_Linux" class="main_h2">
       <h2>GNU/Linux</h2>
 
       <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32 bit (i686) and 64 bit (x86_64) machines.</p>
@@ -139,7 +153,7 @@
 
 
 <!-- MS Windows -->
-    <div class="main_h2">
+    <div id="MS_Windows" class="main_h2">
       <h2>MS Windows</h2>
       <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.</p>
 
@@ -177,7 +191,7 @@
 
 
 <!-- Mac OS X -->
-    <div class="main_h2">
+    <div id="Mac_OS_X" class="main_h2">
       <h2>Mac OS X</h2>
         <p>Pre-compiled binary releases of certain relax versions are available for Mac OS X within the <a href="http://www.finkproject.org/">Fink project</a>.  These can be installed for Python 2.5 with the command:</p>
 
@@ -200,7 +214,7 @@
 
 
 <!-- Source code -->
-    <div class="main_h2">
+    <div id="Source_code_release" class="main_h2">
       <h2>Source code release (for all other systems)</h2>
 
         <p>The program source, in which all functions except for relaxation curve fitting will be available without compilation, and associated GPG signatures (see the Security section below) can be downloaded from:</p>
@@ -252,7 +266,7 @@
 
 
 <!-- Source code repository -->
-<div class="main_h2">
+<div id="Source_code_repository" class="main_h2">
     <h2>Source code repository</h2>
 
     <p>The most up-to-date code can be obtained from <a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a> using one of the following commands (which involve the program <a href="http://subversion.tigris.org/">Subversion</a>):</p>
