Added missing items in the top menu of the download page.
http://www.nmr-relax.com/download.html

--- a/download.html
+++ b/download.html
@@ -81,6 +81,12 @@
 <li><a href="download.html#Source_code_release">Source code release</a></li>
 
 <li><a href="download.html#Source_code_repository">Source code repository</a></li>
+
+<li><a href="download.html#Security">Security</a></li>
+
+<li><a href="download.html#New_releases">New releases</a></li>
+
+<li><a href="download.html#All_releases">All releases</a></li>
 </ul>
 
 
@@ -289,7 +295,7 @@
 
 
 <!-- Security -->
-<div class="main_box">
+<div id="Security" class="main_box">
     <h1>Security</h1>
 
     <p>To check that the file hasn't been compromised, firstly download the GPG signature for the distribution package.  Then to test this signature, download the relax <a href="https://gna.org/project/memberlist-gpgkeys.php?group=relax" title="relax GPG public key">public key</a> and run the command:</p>
@@ -302,7 +308,7 @@
 
 
 <!-- New releases -->
-  <div class="main_box">
+  <div id="New_releases" class="main_box">
     <h1>New releases</h1>
 
       <p>New versions of relax are announced on the relax-announce mailing list.  For a description of this list and instructions on how to subscribe to it, please read the relax <a href="communication.html#mailing-lists">mailing list</a> section of the <a href='communication.html'>communication page</a>.</p>
@@ -311,7 +317,7 @@
 
 
 <!-- All releases -->
-  <div class="main_box">
+  <div id="All_releases" class="main_box">
     <h1>All releases</h1>
 
       <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
