Improved the index on the download page (http://www.nmr-relax.com/download.html).
This follows the post https://mail.gna.org/public/relax-devel/2011-06/msg00128.html
(Message-id: <BANLkTi=fE=HpN4GFA6mK0ngW0gf-PYj+Hw@mail.gmail.com>).

--- a/download.html
+++ b/download.html
@@ -64,35 +64,29 @@
 </div>
 
 <div class="main">
-<!-- Current release -->
+<!-- Index -->
   <div class="main_box">
-    <h1>Current releases</h1>
+    <h1>relax downloads</h1>
+
+    <ul>
+    <li><a href="download.html#Current release">Current release</a></li>
+     <ul>
+      <li><a href="download.html#GNU_Linux">GNU/Linux</a></li>
+      <li><a href="download.html#MS_Windows">MS Windows</a></li>
+      <li><a href="download.html#Mac_OS_X">Mac OS X</a></li>
+      <li><a href="download.html#Source_code_release">Source code release</a></li>
+     </ul></li>
+    <li><a href="download.html#Source_code_repository">Source code repository</a></li>
+    <li><a href="download.html#Security">Security</a></li>
+    <li><a href="download.html#New_releases">New releases</a></li>
+    <li><a href="download.html#All_releases">All releases</a></li>
+    </ul>
+  </div>
 
 
-<ul>
-<li><a href="download.html#General_info">General information</a></li>
-
-<li><a href="download.html#GNU_Linux">GNU/Linux</a></li>
-
-<li><a href="download.html#MS_Windows">MS Windows</a></li>
-
-<li><a href="download.html#Mac_OS_X">Mac OS X</a></li>
-
-<li><a href="download.html#Source_code_release">Source code release</a></li>
-
-<li><a href="download.html#Source_code_repository">Source code repository</a></li>
-
-<li><a href="download.html#Security">Security</a></li>
-
-<li><a href="download.html#New_releases">New releases</a></li>
-
-<li><a href="download.html#All_releases">All releases</a></li>
-</ul>
-
-
-<!-- General info -->
-    <div id="General_info" class="main_h2">
-      <h2> General information</h2>
+<!-- Current release -->
+  <div id="Current release" class="main_box">
+    <h1>Current release</h1>
 
       <p>The current stable release is relax version 1.3.10.</p>
 
@@ -111,9 +105,6 @@
       <h4>wxPython</h4>
 
       <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.</p>
-
-    </div>
-
 
 
 <!-- GNU Linux -->
