The 'Source code repository' section of the download page is now a full section.
This is rather than being a subsection of http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -259,12 +259,13 @@
           <p>The <a href="devel_platform.html">development platform</a> is required for compiling the C modules through <a href="http://www.scons.org/">SCons</a>, for compiling the LaTeX manual, and generating relax distribution packages.</p>
 
    </div>
+</div>
 
 
 
 <!-- Source code repository -->
-<div id="Source_code_repository" class="main_h2">
-    <h2>Source code repository</h2>
+<div id="Source_code_repository" class="main_box">
+    <h1>Source code repository</h1>
 
     <p>The most up-to-date code can be obtained from <a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a> using one of the following commands (which involve the program <a href="http://subversion.tigris.org/">Subversion</a>):</p>
 
@@ -280,8 +281,7 @@
 
     <p>Keep in mind: since this code changes often, at some points, it could be unstable and non functional.</p>
 
-   </div>
-  </div>
+</div>
 
 
 
