Updated the compilation instructions on the download page.
The changes are to the section http://www.nmr-relax.com/download.html#Source_code_release.

--- a/download.html
+++ b/download.html
@@ -249,14 +249,14 @@
           </ul>
 
          <h3 id="compilation">Compilation</h3>
-          <p>For compiling the C modules relax uses the <a href='http://www.scons.org/'>SCons</a> cross platform compilation tool.   Building these modules is currently only required for the exponential curve fitting used to determine the R<sub>1</sub> and R<sub>2</sub> relaxation rates.  By <a href='http://www.scons.org/download.php'>downloading</a> and installing the program and running the command:</p>
+         <p>For compiling the C modules relax uses the <a href='http://www.scons.org/'>SCons</a> cross platform compilation tool.   Building these modules is currently only required for the exponential curve fitting used to determine the R<sub>1</sub> and R<sub>2</sub> relaxation rates.  By <a href='http://www.scons.org/download.php'>downloading</a> and installing <em>SCons</em> and running the command:</p>
 
           <p><em>> scons</em></p>
 
-          <p>in the relax base directory, the modules should automatically compile.  This should work on all operating systems assuming that a C compiler is present.  The NumPy header files also need to be installed.  On some platforms these files are distributed separately as numpy-devel, python-numpy-devel, etc.  If an error occurs on MS Windows, read the instructions <a href="windows_devel.html#MSCV_probs">here</a>.</p>
+          <p>in the relax base directory, the modules should automatically compile.  This should work on all operating systems assuming that a C compiler is present.  The Python header or development files also need to be installed.  These files are installed with Python on MS Windows, but needs to be installed as a separate package often called something like python-devel on GNU/Linux and Mac OS X.  If an error occurs on MS Windows, read the instructions <a href="windows_devel.html#MSCV_probs">here</a>.</p>
 
          <h3>Development platforms</h3>
-          <p>The <a href="devel_platform.html">development platform</a> is required for compiling the C modules through <a href="http://www.scons.org/">SCons</a>, for compiling the LaTeX manual, and generating relax distribution packages.</p>
+          <p>The <a href="devel_platform.html">development platform</a> is required for compiling the C modules through <a href="http://www.scons.org/">SCons</a> on MS Windows, for compiling the LaTeX manual, and generating relax distribution packages.</p>
 
    </div>
 </div>
